<resources>
    <string name="app_name">CRUD</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="already_a_user_login_here">Already a user? Login Here</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_user_register_here">new user? Register here</string>
    <string name="enter_email">Enter Email</string>
    <string name="login">Login</string>
    <string name="enter_course_name">Enter Course Name</string>
</resources>