<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_shade_1"
    tools:context=".RegistrationActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutUsername"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="140dp"
        android:hint="@string/enter_user_name"
        style="@style/TextInputLayout"
        android:padding="5dp"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editUsername"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutPassword"
        android:layout_below="@+id/layoutUsername"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_password"
        style="@style/TextInputLayout"
        android:padding="5dp"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editPassword"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idCnfPwd"
        android:layout_below="@id/layoutPassword"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_password"
        style="@style/TextInputLayout"
        android:padding="5dp"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editConfirmPassword"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/idCnfPwd"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_button_back"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:id="@+id/idBtnRegister"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_a_user_login_here"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_below="@id/idBtnRegister"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:id="@+id/idTVLogin"
        />


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/idPBLoading"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_back"
        android:visibility="gone" />

</RelativeLayout>